test/corpus/ccc.txt
===
CCC
===

"\#{nil         } test #{nil} \
#{nil}"

---
(program (statements (statement (expression (string (string_literal (string_interpolation (string_interpolation_start) (nil) (string_interpolation_end)) (string_content) (string_interpolation (string_interpolation_start) (nil) (string_interpolation_end)) (string_escape) (string_interpolation (string_interpolation_start) (nil) (string_interpolation_end))))))))
